# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.8 2009-09-22 13:04:56 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.5 (2009/??/??)
 - (2009/09/21) Fixed bug#4029 - S/MIME activation with misunderandable message/incomplete documentation.
 - (2009/09/21) Fixed bug#3408 - Richtext editor - editor windows is way to small.
 - (2009/09/21) Fixed bug#4188 - Moving junk mails unnecessarily need subject and body.
 - (2009/09/21) Fixed bug#4189 - RTE off inserts a blank line in the text editor field.
 - (2009/09/21) Fixed bug#4080 - Rich editors javascript overrides onload function.
 - (2009/09/21) Fixed bug#3818 - Customer History - Small/Medium/Preview does
    not work.
 - (2009/09/21) Fixed bug#2532 - Problem when setting queues and subqueues to invalid.
 - (2009/09/18) Updated Spanish translation, thanks to Gustavo Azambuja!
 - (2009/09/16) Fixed bug#4288 - 4288: Use of uninitialized value in
    AdminGenericAgent.pm
 - (2009/09/16) Fixed bug#4292 - "<some@example.com>" in body breaks body on
    ticket split.
 - (2009/09/08) Fixed bug#4255 - RichText is not coupled with RichTextViewing.
    Rich Text is being shown, even if the text/plain MIME part is available.
 - (2009/09/08) Fixed bug#4243 - Adding a key to DefaultTheme HostBased via
    Sysconfig breaks OTRS.
 - (2009/09/08) Fixed bug#4257 - No event based notification is sent on queue
    update.
 - (2009/09/08) Fixed bug#4233 - AgentTicketCompose doesn't remember next state
    while attaching a file.
 - (2009/09/08) Fixed bug#4228 - scripts/DBUpdate-to-2.4.pl -
    MigrateCustomerNotification() fails.
 - (2009/09/08) Fixed bug#4232 - SpellChecker Customer-Interface is not
    working.
 - (2009/09/08) Fixed bug#4248 - follow up email contains the ticket number two